--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,7 +3,7 @@
     {
       "name": "Canten Connect",
       "description": "Food Delievery Web/Mobile Application for College Shops and Caffeteria.",
-      "keyPoints": ["Key point 1", "Key point 2", "Key point 3"],
+      "keyPoints": ["Digitizing the canteen system to reduce wait times, enhancing customer satisfaction during peak hours.", "Utilized the MERN stack for the web-based admin panel and Flutter for the mobile user app, ensuring a seamless user experience.", "Provided admin features for menu, order, and inventory management, along with order management and tracking for users.", "Implemented secure user authentication and payment gateways to ensure data privacy and secure transactions."],
       "techStack": [
         "React.JS",
         "Node JS",
@@ -21,14 +21,14 @@
     },
     {
       "name": "E-Estate",
-      "description": "Description of Project 2.",
+      "description": "MERN stack based E-Estate Web Application.",
       "keyPoints": [
         "Enhanced user satisfaction by implementing advanced search filters, allowing users to refine property searches based on specific criteria such as location, price range, amenities, and property type. This feature significantly improved the user experience by making property discovery more tailored and efficient",
         "Achieved efficient image storage management by leveraging Firebase's capabilities, resulting in reduced MongoDB storage utilization. This optimization streamlined image uploads, storage, and retrieval processes, ensuring faster load times and improved overall system performance.",
         "Implemented robust authentication protocols to ensure secure user access and data protection. By incorporating industry-standard security measures, such as encryption and secure token management, the system guarantees safe user authentication and authorization processes, mitigating risks associated with unauthorized access.",
         "Enhanced user accessibility by integrating Google Sign-In functionality, allowing users to log in securely using their Google accounts. This integration simplified the authentication process for users while maintaining security standards, providing a convenient and trusted login option."
       ],
-      "techStack": ["React.JS", "Node JS", "MongoDB","Express JS" ,"Firebase","Redux","Tailwind CSS"],
+      "techStack": ["React.JS", "Node JS", "MongoDB","Express JS" ,"Redux","Tailwind CSS"],
       "githubRepo": "https://github.com/MohdMusaiyab/real-estate",
       "liveSite": "https://e-estate.onrender.com/",
       "images": [
@@ -38,7 +38,7 @@
     },
     {
       "name": "E-Commerce Web App",
-      "description": "Description of Project 2.",
+      "description": "MERN stack based E-commerce Web Application.",
       "keyPoints": [
         "Designed and developed intuitive admin and user panels that cater to the specific needs of both administrators and users. The interfaces were carefully crafted to be user-friendly, providing easy navigation and access to relevant features and functionalities. This approach ensured that administrators could efficiently manage backend operations, while users enjoyed a seamless and engaging experience.",
         "Implemented a secure payment gateway to facilitate seamless and secure transactions within the application. This integration ensured that users could make payments confidently, using trusted payment methods, without compromising their financial information. By prioritizing security and reliability, the payment gateway contributed to a smooth and trustworthy transaction process.",
