--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
